Changed breakpoint for size of corner peter on the sponsors card to avoid image overlap. Changed SponsorCardProps for better code readability

--- a/apps/site/src/app/(home)/sections/Sponsors/Sponsors.module.scss
+++ b/apps/site/src/app/(home)/sections/Sponsors/Sponsors.module.scss
@@ -112,7 +112,7 @@
 	pointer-events: none;
 	z-index: 2;
 
-	@include utils.media-breakpoint-up(md) {
+	@include utils.media-breakpoint-up(xl) {
 		width: 150px;
 		right: 2rem;
 		bottom: 1rem;
